WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162950
[iOS] Crash in WebResourceLoaderQuickLookDelegate when the client cancels the navigation to a QuickLook resource
https://bugs.webkit.org/show_bug.cgi?id=162950
Summary
[iOS] Crash in WebResourceLoaderQuickLookDelegate when the client cancels the...
Andy Estes
Reported
2016-10-04 16:41:15 PDT
[iOS] Crash in WebResourceLoaderQuickLookDelegate when the client cancels the navigation to a QuickLook resource
Attachments
Patch
(7.35 KB, patch)
2016-10-04 17:03 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2016-10-04 16:41:39 PDT
rdar://problem/23759114
Andy Estes
Comment 2
2016-10-04 17:03:29 PDT
Created
attachment 290671
[details]
Patch
WebKit Commit Bot
Comment 3
2016-10-04 18:04:55 PDT
Comment on
attachment 290671
[details]
Patch Clearing flags on attachment: 290671 Committed
r206801
: <
http://trac.webkit.org/changeset/206801
>
WebKit Commit Bot
Comment 4
2016-10-04 18:05:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug